<resources>
    <string name="app_name">I-Vaga</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="button_login">Login</string>
    <string name="not_member">Não Possui Conta? Cadastre-se!</string>
    <string name="yes_member">Possui Conta? Login!</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="hint_ddd">DDD</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_confirmar_senha">Confirmar Senha</string>
    <string name="hint_rua">Rua</string>
    <string name="hint_numero">Numero</string>
    <string name="hint_complemento">Complemento</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_estado">Estado</string>
    <string name="text_button_cadastrar">Cadastrar</string>
    <string name="text_button_modificar">Modificar</string>
    <string name="text_cadastro">Usuario Cadastrado</string>
    <string name="email_vazio">Campo do e-mail vazio</string>
    <string name="senha_vazio">Campo da senha vazio</string>
    <string name="comparar_senha">A senha de confirmação não é igual a sua senha digitada</string>
    <string name="erro_nome">Digite seu nome</string>
    <string name="erro_sobrenome">Digite seu sobrenome</string>
    <string name="erro_email">Digite seu e-mail</string>
    <string name="erro_ddd">Digite seu DDD</string>
    <string name="erro_telefone">Digite seu telefone</string>
    <string name="erro_senha">Digite sua senha</string>
    <string name="erro_confirmar">Digite sua senha novamente para confirmar</string>
    <string name="erro_rua">Digite a rua da sua residencia</string>
    <string name="erro_numero">Digite o número da sua residencia</string>
    <string name="erro_bairro">Digite o bairro da sua residencia</string>
    <string name="erro_cidade">Digite a cidade da sua residencia</string>
    <string name="erro_estado">Digite o estado da sua residencia</string>
    <string name="fazer_login">E-mail ou Senha invalidos</string>
    <string name="text_off">Garagem off line</string>
    <string name="text_on">Garagem on line</string>
    <string name="content_email">Campo para digitar o email para se logar</string>
    <string name="content_senha">Campo para digitar a senha para se logar</string>
    <string name="content_button_logar">Botão para se logar</string>
    <string name="content_button_cadastro">Botão para acessar a pagina de cadastro</string>
    <string name="content_nome">Campo para digitar o nome para se cadastrar</string>
    <string name="content_sobrenome">Campo para digitar o sobrenome para se cadastrar</string>
    <string name="content_email_cadastro">Campo para digitar o email para se cadastrar</string>
    <string name="content_ddd">Campo para digitar o ddd do seu telefone</string>
    <string name="content_telefone">Campo para digitar o telefone para se cadastrar</string>
    <string name="content_senha_cadastro">Campo para digitar a senha para se cadastrar</string>
    <string name="content_confirmar">Campo para digitar a confirmação da senha para se cadastrar</string>
    <string name="content_rua">Campo para digitar a rua da residencia para se cadastrar</string>
    <string name="content_numero">Campo para digitar o numero da residencia para se cadastrar</string>
    <string name="content_complemento">Campo para digitar o complemento do endereço caso exista</string>
    <string name="content_bairro">Campo para digitar o bairro do endereço para se cadastrar</string>
    <string name="content_cidade">Campo para digitar a cidade do endereço para se cadastrar</string>
    <string name="content_estado">Campo para digitar o estado do endereço para se cadastrar</string>
    <string name="content_button_cadastrar">Botão para cadastrar os dados digitados acima</string>
    <string name="content_pagina_login">Botão para acessar a pagina de login</string>
    <string name="content_foto_usuario">Imagem do perfil do usuario cadastrado</string>
    <string name="content_nome_usuario">Campo do nome completo do usuario cadastrado</string>
    <string name="content_telefone_usuario">Campo do telefone completo do usuario dono da garagem</string>
    <string name="content_endereco_usuario">Campo do endereço completo da garagem cadastrada</string>
    <string name="content_complemento_usuario">Campo do complemento do endereço da garagem se existir</string>
    <string name="content_bairro_usuario">Campo do bairro da garagem cadastrada</string>
    <string name="content_cidade_usuario">Campo da cidade da garagem cadastrada</string>
    <string name="content_estado_usuario">Campo do estado da garagem cadastrada</string>
    <string name="content_button_edit_usuario">Botão de editar os dados do usuario cadastrado</string>
    <string name="content_button_delet_usuario">Botão de deletar os dados do usuario cadastrado</string>
    <string name="content_button_garage">Botão que libera os dados do usuario cadastrado na lista de garagens</string>
    <string name="content_spinner_estado">Campo de seleção de estados cadastrado</string>
    <string name="content_spinner_cidade">Campo de seleção de cidades cadastrada</string>
    <string name="content_list">Lista de bairros cadastrados</string>
    <string name="content_button_list">Botão para levar à pagina de login</string>
    <string name="delet_usuario">Usuario deletado:</string>
    <string name="email_existente">Este usuário ja possui cadastro</string>
    <string name="login_ok">E-mail e senha corretos</string>
    <string name="usuario_nao_cadastrado">Dados do usuario não encontrado</string>
    <string name="welcome">Bem vindo</string>
    <string name="endereco">Endereço:</string>
    <string name="num">Nº:</string>
    <string name="content_nome_adapter">Campo do nome cadastrado</string>
    <string name="content_sobrenome_adapter">Campo do sobrenome cadastrado</string>
    <string name="content_endereco_adapter">Campo do endereço cadastrado</string>
    <string name="content_numero_adapter">Campo do numero do endereço cadastrado</string>
    <string name="content_complemento_adapter">Campo do complemento do endereço cadastrado</string>
    <string name="content_bairro_adapter">Campo do bairro do endereço cadastrado</string>
    <string name="content_ddd_adapter">Campo do ddd do telefone cadastrado</string>
    <string name="content_telefone_adapter">Campo do telefone cadastrado</string>
    <string name="menu_cadastro">Cadastro</string>
    <string name="erro_cadastro">Usuário não cadastrado</string>
</resources>
