<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorEditText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/layout_margin"
            android:background="@color/colorbackground">

            <ImageView
                android:id="@+id/imageUsuario"
                android:layout_width="@dimen/layout_usuario"
                android:layout_height="@dimen/layout_usuario"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_box_black_24dp"
                android:contentDescription="@string/content_foto_usuario"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorEditText"
            android:layout_margin="@dimen/layout_margin">

            <TextView
                android:id="@+id/nomeCompleto"
                style="@style/edit_text_usuario"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="@dimen/text_size_click"
                android:textColor="@color/colorPrimary"
                android:contentDescription="@string/content_nome_usuario"/>

            <TextView
                android:id="@+id/telefoneCompleto"
                style="@style/edit_text_usuario"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorPrimary"
                android:contentDescription="@string/content_telefone_usuario"/>

            <TextView
                android:id="@+id/enderecoCompleto"
                style="@style/edit_text_usuario"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorPrimary"
                android:contentDescription="@string/content_endereco_usuario"/>

            <TextView
                android:id="@+id/complementoCompleto"
                style="@style/edit_text_usuario"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorPrimary"
                android:contentDescription="@string/content_complemento_usuario"/>

            <TextView
                android:id="@+id/bairroCompleto"
                style="@style/edit_text_usuario"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorPrimary"
                android:contentDescription="@string/content_bairro_usuario"/>

            <TextView
                android:id="@+id/cidadeCompleto"
                style="@style/edit_text_usuario"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorPrimary"
                android:contentDescription="@string/content_cidade_usuario"/>

            <TextView
                android:id="@+id/estadoCompleto"
                style="@style/edit_text_usuario"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorPrimary"
                android:contentDescription="@string/content_estado_usuario"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="@dimen/imagem_button"
                android:layout_height="@dimen/imagem_button"
                android:src="@drawable/ic_edit_black_24dp"
                android:layout_margin="@dimen/layout_margin_top"
                android:contentDescription="@string/content_button_delet_usuario"/>

            <ImageButton
                android:id="@+id/btnDelet"
                android:layout_width="@dimen/imagem_button"
                android:layout_height="@dimen/imagem_button"
                android:src="@drawable/ic_delete_black_24dp"
                android:layout_margin="@dimen/layout_margin_top"
                android:contentDescription="@string/content_button_edit_usuario"/>

        </LinearLayout>

        <ToggleButton
            android:id="@+id/toggleButtonGaragem"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textOff="@string/text_off"
            android:textOn="@string/text_on"
            android:contentDescription="@string/content_button_garage"/>

    </LinearLayout>

</ScrollView>