<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scroll_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorbackground"
        android:paddingBottom="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/padding"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:src="@drawable/logo"/>

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/edit_text_login"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/hint_email"
            android:contentDescription="@string/content_email"/>

        <EditText
            android:id="@+id/editTextSenha"
            style="@style/edit_text_login"
            android:drawableLeft="@drawable/ic_lock_open_black_24dp"
            android:hint="@string/hint_senha"
            android:contentDescription=""/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/buttonstyle"
            android:elevation="@dimen/layout_margin"
            android:text="@string/button_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:contentDescription="@string/content_button_logar"/>

        <TextView
            android:id="@+id/linkCadastro"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center"
            android:text="@string/not_member"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size"
            android:contentDescription="@string/content_button_cadastro"/>

    </LinearLayout>

</ScrollView>